--- a/src/Components/FloatingDiv/FloatingDiv.css
+++ b/src/Components/FloatingDiv/FloatingDiv.css
@@ -5,12 +5,14 @@
     border-radius: 17px;
     display: flex;
     align-items: center;
-    padding: 0px 28px 0px 0px;
+    padding: 0px 15px 0px 0px;
     height: 4.5rem;
+    min-width: 180px;
     /* width: 300px; */
     
 }
 .floatingDiv > img {
+    margin: 0 -10px 0 -15px;
     transform: scale(0.4);
    /* max-width: 100px; */
    
@@ -18,7 +20,7 @@
 .floatingDiv > span {
      
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'Poltawski Nowy', serif;
     /* font-family: 'Roboto', sans-serif; */
     /* yahan ye color add kia hy bad mein dark mode k waqt */
