--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,7 +4,10 @@
 /* border: 2px solid red; */
 top: 4rem;
     position: relative;
-    margin-top: -10rem;
+    margin-top: -15rem;
+    margin-left: -10rem;
+    margin-right: -10rem;
+    margin-bottom: -6rem;
   }
   .f-content {
     position: absolute;
